# swagger.json
@@ -1,22 +1,18 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Books API",
-    "description": "Books API",
+    "title": "Library API",
+    "description": "API for managing books and authors",
     "version": "1.0.0"
   },
   "host": "cse341-project2-473b.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "https"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/": {
       "get": {
-        "tags": [
-          "Hello World"
-        ],
-        "description": "",
+        "tags": ["General"],
+        "description": "Hello world route",
         "responses": {
           "200": {
             "description": "OK"
@@ -24,71 +20,59 @@
         }
       }
     },
+
     "/books/": {
       "get": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
+        "tags": ["Books"],
+        "description": "Get all books",
+        "produces": ["application/json"],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "List of books"
           }
         }
       },
       "post": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "description": "Create a new book",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                }
+                "title": { "example": "Clean Code" },
+                "author": { "example": "Robert C. Martin" },
+                "genre": { "example": "Programming" },
+                "publishedYear": { "example": 2008 },
+                "pages": { "example": 464 },
+                "language": { "example": "English" },
+                "rating": { "example": 4.7 }
               }
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Book created"
+          },
+          "400": {
+            "description": "Invalid input"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Server error"
           }
         }
       }
     },
+
     "/books/{id}": {
       "get": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
+        "tags": ["Books"],
+        "description": "Get a book by ID",
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "id",
@@ -99,15 +83,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Book found"
+          },
+          "404": {
+            "description": "Book not found"
           }
         }
       },
       "put": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "description": "Update a book",
         "parameters": [
           {
             "name": "id",
@@ -118,42 +103,36 @@
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                }
+                "title": { "example": "Clean Code" },
+                "author": { "example": "Robert C. Martin" },
+                "genre": { "example": "Programming" },
+                "publishedYear": { "example": 2008 },
+                "pages": { "example": 464 },
+                "language": { "example": "English" },
+                "rating": { "example": 4.7 }
               }
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Book updated"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Invalid input"
+          },
+          "404": {
+            "description": "Book not found"
           }
         }
       },
       "delete": {
-        "tags": [
-          "Books"
-        ],
-        "description": "",
+        "tags": ["Books"],
+        "description": "Delete a book",
         "parameters": [
           {
             "name": "id",
@@ -164,10 +143,136 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Book deleted"
+          },
+          "404": {
+            "description": "Book not found"
+          }
+        }
+      }
+    },
+
+    "/authors/": {
+      "get": {
+        "tags": ["Authors"],
+        "description": "Get all authors",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "List of authors"
+          }
+        }
+      },
+      "post": {
+        "tags": ["Authors"],
+        "description": "Create a new author",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": { "example": "James Clear" },
+                "nationality": { "example": "American" },
+                "birthYear": { "example": 1986 },
+                "genre": { "example": "Self-help" },
+                "awards": { "example": "Goodreads Choice Award" }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Author created"
+          },
+          "400": {
+            "description": "Invalid input"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Server error"
+          }
+        }
+      }
+    },
+
+    "/authors/{id}": {
+      "get": {
+        "tags": ["Authors"],
+        "description": "Get an author by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Author found"
+          },
+          "404": {
+            "description": "Author not found"
+          }
+        }
+      },
+      "put": {
+        "tags": ["Authors"],
+        "description": "Update an author",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": { "example": "James Clear" },
+                "nationality": { "example": "American" },
+                "birthYear": { "example": 1986 },
+                "genre": { "example": "Self-help" },
+                "awards": { "example": "Goodreads Choice Award" }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Author updated"
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "404": {
+            "description": "Author not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Authors"],
+        "description": "Delete an author",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Author deleted"
+          },
+          "404": {
+            "description": "Author not found"
           }
         }
       }
